[project]
name = "user-balance"
version = "0.1.0"
description = ""
authors = [
    {name = "Maksim Tarkin",email = "williamcano97@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "envparse (>=0.2.0,<0.3.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
